--- a/bitcoin-donation-app/src/style.css
+++ b/bitcoin-donation-app/src/style.css
@@ -99,8 +99,17 @@
 
 /*SPINNER STYLES*/
 
+.loading {
+  position: fixed;
+  width: 100%;
+  height: 200%;
+  background-color: white;
+  opacity: 0.7;
+  z-index: 1;
+}
+
 .loader {
-  opacity: 0.8;
+  opacity: 0.9;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -116,6 +125,7 @@
   overflow: hidden;
   width: 1em;
   height: 1em;
+  z-index: 2;
   border-radius: 50%;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
